# tcore3

./: CMakeLists.txt  README.md
api/: api.h
logic/: CMakeLists.txt  CMakeLists.txt.bak  module_create.bat  module_del.bat
logic/ai/: CMakeLists.txt  ai.cpp  ai.h  header.h  main.cpp
logic/buff/: CMakeLists.txt  buff.cpp  buff.h  header.h  main.cpp
logic/cards/: CMakeLists.txt  cards.cpp  cards.h  header.h  main.cpp
logic/common/: define.h  ev.h  http_def.h  redis_def.h
logic/configer/: CMakeLists.txt  configer.cpp  configer.h  header.h  main.cpp
logic/effect/: CMakeLists.txt  effect.cpp  effect.h  header.h  main.cpp
logic/event/: CMakeLists.txt  event.cpp  event.h  main.cpp
logic/game/: CMakeLists.txt  combiner.cpp  combiner.h  game.cpp  game.h  header.h  main.cpp  orbit.cpp  orbit.h  role.cpp  role.h  score.cpp  score.h
logic/gate/: CMakeLists.txt  gate.cpp  gate.h  header.h  main.cpp  wbServerDelegate.cpp  wbServerDelegate.h  wsDelegate.cpp  wsDelegate.h
logic/idmanager/: CMakeLists.txt  header.h  idmanager.cpp  idmanager.h  main.cpp
logic/interface/: IGate.h  attribute.h  auto_config.h  iAi.h  iBuff.h  iCards.h  iCombiner.h  iConfiger.h  iEffect.h  iEvent.h  iGame.h  iIDManager.h  iLogicer.h  iMaster.h  iMatch.h  iModel.h  iNoder.h  iOrbit.h  iPublic.h  iRedis.h  iReference.h  iRole.h  iScene.h  iScore.h  iSession.h  iSkill.h  iStorage.h  iWebSocket.h
logic/kcper/: CMakeLists.txt  kcpServer.cpp  kcpServer.h  kcpSession.cpp  kcpSession.h  kcper.cpp  kcper.h  main.cpp
logic/kcper/ikcp/: ikcp.h  test.cpp
logic/logicer/: CMakeLists.txt  header.h  logicer.cpp  logicer.h  main.cpp
logic/master/: CMakeLists.txt  header.h  idmanager.cpp  idmanager.h  main.cpp  master.cpp  master.h  masterSession.cpp  masterSession.h
logic/match/: CMakeLists.txt  header.h  main.cpp  match.cpp  match.h
logic/model/: CMakeLists.txt  Header.h  Memony.h  Model.cpp  Model.h  Row.cpp  Row.h  Table.cpp  Table.h  Unit.cpp  Unit.h  header.h  main.cpp  model.cpp  model.h  row.h  table.h  unit.cpp  unit.h
logic/noder/: CMakeLists.txt  header.h  main.cpp  noder.cpp  noder.h  noderSession.cpp  noderSession.h
logic/proto/: Data.pb.cc  Data.pb.h  Game.pb.cc  Game.pb.h  Noder.pb.cc  Noder.pb.h  Noder.proto  build.bat  data.pb.cc  data.pb.h  data.proto  game.pb.cc  game.pb.h  game.proto  noder.pb.cc  noder.pb.h
logic/proto/google/protobuf/: any_test.pb.cc  any_test.pb.h  map_lite_unittest.pb.cc  map_lite_unittest.pb.h  map_proto2_unittest.pb.cc  map_proto2_unittest.pb.h  map_unittest.pb.cc  map_unittest.pb.h  test_messages_proto2.pb.cc  test_messages_proto2.pb.h  test_messages_proto3.pb.cc  test_messages_proto3.pb.h  unittest.pb.cc  unittest.pb.h  unittest_arena.pb.cc  unittest_arena.pb.h  unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.cc  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.cc  unittest_embed_optimize_for.pb.h  unittest_empty.pb.cc  unittest_empty.pb.h  unittest_enormous_descriptor.pb.cc  unittest_import.pb.cc  unittest_import.pb.h  unittest_import_lite.pb.cc  unittest_import_lite.pb.h  unittest_import_public.pb.cc  unittest_import_public.pb.h  unittest_import_public_lite.pb.cc  unittest_import_public_lite.pb.h  unittest_lazy_dependencies.pb.cc  unittest_lazy_dependencies.pb.h  unittest_lazy_dependencies_custom_option.pb.cc  unittest_lazy_dependencies_custom_option.pb.h  unittest_lazy_dependencies_enum.pb.cc  unittest_lazy_dependencies_enum.pb.h  unittest_lite.pb.cc  (+33 more)
logic/proto/google/protobuf/compiler/cpp/: cpp_test_bad_identifiers.pb.cc  cpp_test_bad_identifiers.pb.h  cpp_test_large_enum_value.pb.cc  (+1 more)
logic/proto/google/protobuf/util/: json_format_proto3.pb.cc  json_format_proto3.pb.h  message_differencer_unittest.pb.cc  message_differencer_unittest.pb.h
logic/redis/: CMakeLists.txt  header.h  main.cpp  redis.cpp  redis.h  rediser.cpp  rediser.h
logic/redis/hiredis/: hiredis.h
logic/redis/hiredis/linux/: hiredis-test
logic/redis/hiredis/win/: sds.h  win32_hiredis.h
logic/relation/: CMakeLists.txt  header.h  main.cpp  relation.cpp  relation.h
logic/scene/: CMakeLists.txt  header.h  main.cpp  scene.cpp  scene.h
logic/skill/: CMakeLists.txt  caster.cpp  caster.h  header.h  main.cpp  reciver.cpp  reciver.h  skill.cpp  skill.h
logic/storage/: CMakeLists.txt  header.h  main.cpp  storage.cpp  storage.h
logic/tcptester/: CMakeLists.txt  header.h  main.cpp  tcpserver.cpp  tcpserver.h  tcpsession.cpp  tcpsession.h  tcptester.cpp  tcptester.h
logic/udptester/: CMakeLists.txt  header.h  main.cpp  udpsession.cpp  udpsession.h  udptester.cpp  udptester.h
logic/udptester/ikcp/: ikcp.c  test.cpp  test.h
logic/websocket/: CMakeLists.txt  header.h  main.cpp  webSocket.cpp  webSocket.h  webSocketServer.cpp  webSocketServer.h  webSocketSession.cpp  webSocketSession.h
tcore3/: CMakeLists.txt  core.cpp  core.h  instance.h  main.cpp
tcore3/httper/: httpData.h  httpRequest.cpp  httpRequest.h  httper.cpp  httper.h
tcore3/logger/: logfile.cpp  logfile.h  logger.cpp  logger.h
tcore3/logic/: logic.cpp  logic.h
tcore3/net/linux/: epoller.cpp  epoller.h  header.h  interface.h
tcore3/net/linux/tcp/: accepter.cpp  accepter.h  tcper.cpp  tcper.h
tcore3/net/linux/udp/: udper.cpp  udper.h
tcore3/net/win/: header.h  interface.h  iocper.cpp  iocper.h
tcore3/net/win/tcp/: accepter.cpp  accepter.h  tcper.cpp  tcper.h
tcore3/net/win/udp/: udper.cpp  udper.h
tcore3/timer/: tbase.cpp  tbase.h  tgear.cpp  tgear.h  timermgr.cpp  timermgr.h  tlist.cpp  tlist.h
tools/config_maker/: CMakeLists.txt  automaker.h  header.h  main.cpp  xmlmaker.cpp  xmlmaker.h
tools/config_maker/excel/: bof.hpp  book.hpp  cell.hpp  excel.pri  exceptions.hpp  formula.hpp  record.hpp  sheet.hpp  sst.hpp  stream.hpp  string.hpp
tools/config_maker/excel/compoundfile/: compoundfile.hpp  compoundfile_exceptions.hpp  compoundfile_stream_and_dir.hpp  header.hpp  msat.hpp  sat.hpp  utils.hpp
tools/model_maker/: CMakeLists.txt  header.h  main.cpp
tools/module_creater/: CMakeLists.txt  header.h  main.cpp  template.h
(+63 files in other folders)
